facet-derive-emit/tests/codegen/snapshots/r#mod__codegen__rename_all_kebabcase.snap
---
source: facet-derive-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[facet(rename_all = \"kebab-case\")]\n        struct KebabCaseExample {\n            field_one: String,\n            field_two: String,\n        }\n        \"#)"
---
#[used]
static KEBAB_CASE_EXAMPLE_SHAPE: &'static ::facet::Shape =
    <KebabCaseExample as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for KebabCaseExample {
    const VTABLE: &'static ::facet::ValueVTable = &const {
        let mut vtable = ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(
            f,
            "KebabCaseExample"
        ));
        vtable
    };
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                ::facet::Field::builder()
                    .name("field-one")
                    .shape(::facet::shape_of(&|s: &KebabCaseExample| &s.field_one))
                    .offset(::core::mem::offset_of!(KebabCaseExample, field_one))
                    .build(),
                ::facet::Field::builder()
                    .name("field-two")
                    .shape(::facet::shape_of(&|s: &KebabCaseExample| &s.field_two))
                    .offset(::core::mem::offset_of!(KebabCaseExample, field_two))
                    .build(),
            ]
        };
        ::facet::Shape::builder_for_sized::<Self>()
            .ty(::facet::Type::User(::facet::UserType::Struct(
                ::facet::StructType::builder()
                    .repr(::facet::Repr::c())
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            )))
            .build()
    };
}
